--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -55,7 +55,7 @@ html body {
 .titleHeader {
   margin-top: 2%;
   margin-bottom: 1%;
-  font-size: 44px;
+  font-size: 50px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-shadow: 0px 0px 2px rgba(6, 122, 255);
 }
@@ -83,7 +83,8 @@ html body {
 }
 
 .imgExample {
-  width: 40%;
+  width: 50%;
+  box-shadow: 0px 0px 5px black;
 }
 
 .dataPar {
