--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -127,3 +127,15 @@ html body {
 .footerCopyright {
   margin-left: 55px;
 }
+
+
+
+.qualityDiv {
+  margin-top: 100px;
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+  background-color: rgba(216, 216, 216, 0.821);
+  border-radius: 2px;
+  box-shadow: 0px 0px .1px rgb(0, 0, 0);
+}
