--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -52,6 +52,12 @@ html body {
   background-color: rgba(80, 140, 184, 0.756);
 }
 
+.navButtons:active {
+  cursor: pointer;
+  box-shadow: 0px 0px 0px 0px black;
+  background-color: rgba(56, 99, 129, 0.756);
+}
+
 .headerClass {
   margin-top: 120px;
   display: flex;
