--- a/full-stack-project/src/index.css
+++ b/full-stack-project/src/index.css
@@ -67,7 +67,7 @@ html body {
 .nav-buttons:hover {
   cursor: pointer;
   text-shadow: 0px 0px 2px antiquewhite;
-  color: rgba(255, 250, 235);
+  color: rgb(203, 211, 212);
 }
 
 
