--- a/full-stack-project/src/index.css
+++ b/full-stack-project/src/index.css
@@ -7,11 +7,11 @@
 html body {
   width: 100vw;
   height: 100vh;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-image: url("https://images.pexels.com/photos/1624496/pexels-photo-1624496.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-image: url("https://images.pexels.com/photos/73909/nuclear-weapons-test-nuclear-weapon-weapons-test-explosion-73909.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .site-wrap {
@@ -31,10 +31,9 @@ html body {
   right: 0;
   top: -25px; 
   bottom: 0;
-  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.2);
+  box-shadow: inset 0 0 0 200px rgba(43, 43, 43, 0.6);
   filter: blur(10px);
 }
-
 
 .nav-tab {
   background: inherit;
@@ -56,8 +55,9 @@ html body {
   padding: 1%;
   width: 13%;
   font-size: 1.6em;
-  color: rgba(174, 181, 198);
+  color: rgb(170, 170, 170);
   text-decoration: none;
+  text-shadow: 0px 0px 4px rgb(0, 0, 0);
   transition: color .25s ease-in-out, text-shadow .25s ease-in-out;
   border-radius: 2px;
   box-shadow: none;
@@ -65,9 +65,10 @@ html body {
 }
 
 .nav-buttons:hover {
+  position: relative;
   cursor: pointer;
-  text-shadow: 0px 0px 2px antiquewhite;
-  color: rgb(203, 211, 212);
+  text-shadow: 0px 0px 4px rgb(214, 214, 214);
+  color: rgb(221, 221, 221);
 }
 
 
@@ -76,28 +77,35 @@ html body {
   display: flex;
   width: 99vw;
   flex-direction: column;
-  background-color: rgba(216, 216, 216, 0.2);
+  background-color: rgba(59, 59, 59, 0.274);
   border-radius: 2px;
-  box-shadow: 0px 0px .1px rgb(0, 0, 0);
+  box-shadow: inset 0px 0px 200px rgb(65, 65, 65);
 }
 
 .title-header {
-  color: rgb(108, 116, 119);
+  color: rgb(207, 207, 207);
   margin-top: 2%;
   margin-bottom: 1%;
   font-size: 50px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  text-shadow: 3px 3px 5px rgb(0, 0, 0);
+  text-shadow: 1px 2px 3px rgb(0, 0, 0);
 }
 
 .intro-par {
+
   font-size: 25px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin: 2%;
-  text-shadow: 0px 0px .03px rgba(103, 172, 91);
+  color: rgb(207, 207, 207);
+  text-shadow: 1px 2px 3px rgb(0, 0, 0);
 }
 
 .welcome-header {
-  text-shadow: 0px 0px .03px rgba(103, 172, 91);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.header-exit {
+  text-shadow: 0px 0px 1px rgb(172, 172, 172);
 }
 
 
