--- a/full-stack-project/src/index.css
+++ b/full-stack-project/src/index.css
@@ -8,17 +8,18 @@ html body {
   width: 100vw;
   height: 100vh;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-image: url("https://images.pexels.com/photos/73909/nuclear-weapons-test-nuclear-weapon-weapons-test-explosion-73909.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .site-wrap {
   display: flex;
   justify-content: center;
   width: 100vw;
+  height: 100vh;
   text-align: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-image: url("https://images.pexels.com/photos/1573724/pexels-photo-1573724.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
 }
 
 .nav-tab:before {
@@ -31,7 +32,7 @@ html body {
   right: 0;
   top: -25px; 
   bottom: 0;
-  box-shadow: inset 0 0 0 200px rgba(43, 43, 43, 0.6);
+  box-shadow: inset 0 0 0 200px rgba(100, 99, 99, 0.26);
   filter: blur(10px);
 }
 
@@ -71,15 +72,29 @@ html body {
   color: rgb(221, 221, 221);
 }
 
+.header-wrap:before {
+  content: " ";
+  width: auto;
+  height: auto;
+  background: inherit;
+  position: absolute;
+  left: -25px; 
+  right: 0;
+  top: -25px; 
+  bottom: 0;
+  box-shadow: inset 0 0 0 200px rgba(43, 43, 43, 0.6);
+  filter: blur(10px);
+}
 
 .header-wrap {
   margin-top: 120px;
   display: flex;
+  position: relative;
   width: 99vw;
   flex-direction: column;
-  background-color: rgba(59, 59, 59, 0.274);
+
   border-radius: 2px;
-  box-shadow: inset 0px 0px 200px rgb(65, 65, 65);
+  overflow: hidden;
 }
 
 .title-header {
@@ -108,6 +123,9 @@ html body {
   text-shadow: 0px 0px 1px rgb(172, 172, 172);
 }
 
+#no-filter {
+  filter: none;
+}
 
 .footer-div {
   display: flex;
