--- a/full-stack-project/src/index.css
+++ b/full-stack-project/src/index.css
@@ -19,7 +19,7 @@ html body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-image: url("https://images.pexels.com/photos/1573724/pexels-photo-1573724.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-image: url("https://images.pexels.com/photos/1745415/pexels-photo-1745415.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .nav-tab:before {
@@ -61,8 +61,7 @@ html body {
   text-shadow: 0px 0px 4px rgb(0, 0, 0);
   transition: color .25s ease-in-out, text-shadow .25s ease-in-out;
   border-radius: 2px;
-  box-shadow: none;
-  filter: none;
+
 }
 
 .nav-buttons:hover {
@@ -72,19 +71,7 @@ html body {
   color: rgb(221, 221, 221);
 }
 
-.header-wrap:before {
-  content: " ";
-  width: auto;
-  height: auto;
-  background: inherit;
-  position: absolute;
-  left: -25px; 
-  right: 0;
-  top: -25px; 
-  bottom: 0;
-  box-shadow: inset 0 0 0 200px rgba(43, 43, 43, 0.6);
-  filter: blur(10px);
-}
+
 
 .header-wrap {
   margin-top: 120px;
@@ -92,9 +79,7 @@ html body {
   position: relative;
   width: 99vw;
   flex-direction: column;
-
   border-radius: 2px;
-  overflow: hidden;
 }
 
 .title-header {
@@ -107,7 +92,6 @@ html body {
 }
 
 .intro-par {
-
   font-size: 25px;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin: 2%;
@@ -124,7 +108,7 @@ html body {
 }
 
 #no-filter {
-  filter: none;
+  z-index: 0;
 }
 
 .footer-div {
