--- a/full-stack-project/src/index.css
+++ b/full-stack-project/src/index.css
@@ -19,7 +19,7 @@ html body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-image: url("https://images.pexels.com/photos/1745415/pexels-photo-1745415.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image: url("https://images.pexels.com/photos/5842/people-vintage-photo-memories.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 .nav-tab:before {
