--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -9,7 +9,7 @@ html, body {
   margin: 0;
 }
 
-.siteWrap {
+.site-wrap {
   display: flex;
   justify-content: center;
   width: 100vw;
@@ -17,7 +17,7 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  background-image: url("https://images.pexels.com/photos/136419/pexels-photo-136419.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-color: #fff;
 }
 
 .nav-tab:before {
@@ -26,21 +26,23 @@ html, body {
   height: auto;
   background: inherit;
   position: absolute;
-  left: -25px; 
+  left: -25px;
   right: 0;
-  top: -25px; 
+  top: -25px;
   bottom: 0;
   box-shadow: inset 0 0 0 200px rgba(156, 168, 177, 0.288);
   filter: blur(9px);
 }
 
 .nav-tab {
+  grid-area: nav;
+  background-color: #f5f8fa;
+  border: 1px solid #d3d4d4;
   background: inherit;
   display: flex;
   justify-content: space-around;
   position: fixed;
-  margin-top: 6px;
-  width: 99vw;
+  width: 100vw;
   height: 85px;
   border-radius: 2px;
   align-items: center;
@@ -73,7 +75,7 @@ html, body {
   text-shadow: 0px 0px 4px black;
 }
 
-.headerClass {
+.header-class {
   margin-top: 120px;
   display: flex;
   width: 99vw;
@@ -83,7 +85,7 @@ html, body {
   box-shadow: 0px 0px .1px rgb(0, 0, 0);
 }
 
-.titleHeader {
+.title-header {
   margin-top: 2%;
   margin-bottom: 1%;
   font-size: 50px;
@@ -91,22 +93,22 @@ html, body {
   text-shadow: 0px 0px 2px rgb(78, 139, 182);
 }
 
-.introPar {
+.intro-par {
   font-size: 25px;
   margin: 2%;
   text-shadow: 0px 0px .03px rgba(103, 172, 91);
 }
 
-.welcomeHeader {
+.welcome-header {
   text-shadow: 0px 0px .03px rgba(103, 172, 91);
 }
 
-.introClosingHeader {
+.header-closing {
   margin-bottom: 2%;
   text-shadow: 0px 0px .03px rgba(103, 172, 91);
 }
 
-.dataDiv {
+.data-div {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -114,14 +116,14 @@ html, body {
   margin-bottom: 50px;
 }
 
-.imgExample {
+.img-example {
   cursor: pointer;
   width: 50%;
   box-shadow: 0px 0px 5px black;
   margin-bottom: 55px;
 }
 
-.dataPar {
+.data-par {
   display: flex;
   padding: 5%;
   margin-top: 20px;
@@ -133,7 +135,7 @@ html, body {
   border-radius: 4px;
 }
 
-.footerDiv {
+.footer-div {
   display: flex;
   position: fixed;
   bottom: 0px;
@@ -145,15 +147,15 @@ html, body {
   background-color: rgba(216, 216, 216, 0.821);
 }
 
-.footerP {
+.footer-par {
   margin-right: 55px;
 }
 
-.footerCopyright {
+.footer-copyright {
   margin-left: 55px;
 }
 
-.qualityDiv {
+.quality-div {
   display: flex;
   margin-top: 120px;
   width: 99vw;
