--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -78,7 +78,7 @@ html, body {
 .header-class {
   margin-top: 120px;
   display: flex;
-  width: 99vw;
+  width: auto;
   flex-direction: column;
   background-color: rgba(156, 168, 177, 0.562);
   border-radius: 2px;
@@ -134,6 +134,28 @@ html, body {
   box-shadow: 0px 0px .1px rgb(0, 0, 0);
   border-radius: 4px;
 }
+
+
+.article-wrap {
+  display: grid;
+  
+
+}
+.article-header {
+
+}
+.article-par {
+
+}
+.article-img {
+
+}
+.article-header {
+
+}
+
+
+/* FOOTER */
 
 .footer-div {
   display: flex;
