introduced new link to Nav, need to make a more promising template for mobile

--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -138,7 +138,9 @@ html, body {
 
 .article-wrap {
   display: grid;
-  
+  width: auto;
+  height: 100vh;
+  margin-top: 8em;
 
 }
 .article-header {
