--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -109,6 +109,7 @@ html, body {
 
 .data-div {
   margin-top: 20px;
+  margin-bottom: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -136,6 +137,7 @@ html, body {
 }
 
 .article-wrap {
+  background: inherit;
   display: grid;
   width: auto;
   height: 100vh;
@@ -146,6 +148,7 @@ html, body {
 /* FOOTER */
 
 .footer-div {
+  background: inherit;
   display: flex;
   position: fixed;
   bottom: 0px;
@@ -154,10 +157,10 @@ html, body {
   display: flex;
   margin: auto;
   width: 100%;
-  background-color: rgba(216, 216, 216, 0.821);
 }
 
 .footer-par {
+  background: inherit;
   margin-right: 55px;
 }
 
