--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -13,12 +13,11 @@ html, body {
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   text-align: center;
-  background-repeat: no-repeat;
+  background: url("https://images.pexels.com/photos/1638044/pexels-photo-1638044.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-position: center;
-  background-attachment: fixed;
-  background: url("https://isorepublic.com/wp-content/uploads/2018/11/cord-fabric-1100x733.jpg")
+  background-size: cover;
 }
 
 .nav-tab:before {
@@ -36,7 +35,6 @@ html, body {
 }
 
 .nav-tab {
-  background-color: #f5f8fa;
   background: inherit;
   display: flex;
   justify-content: space-around;
@@ -49,6 +47,7 @@ html, body {
 }
 
 .nav-buttons {
+  z-index: 20;
   position: relative;
   margin: 0;
   padding: 0;
@@ -137,7 +136,6 @@ html, body {
 }
 
 .article-wrap {
-  background: inherit;
   display: grid;
   width: auto;
   height: 100vh;
@@ -148,7 +146,6 @@ html, body {
 /* FOOTER */
 
 .footer-div {
-  background: inherit;
   display: flex;
   position: fixed;
   bottom: 0px;
@@ -157,10 +154,10 @@ html, body {
   display: flex;
   margin: auto;
   width: 100%;
+  background-color: rgba(216, 216, 216, 0.821);
 }
 
 .footer-par {
-  background: inherit;
   margin-right: 55px;
 }
 
