--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -3,8 +3,12 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
+  display: flex;
+  justify-content: center;
   width: 100vw;
+  background-color: rgb(231, 231, 231);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
 }
@@ -12,10 +16,10 @@ html, body {
 .site-wrap {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 80vw;
   height: 100%;
   text-align: center;
-  background-color: whitesmoke;
+  background-color: rgb(219, 219, 219);
   background-position: center;
   background-size: auto;
 }
@@ -38,7 +42,7 @@ html, body {
   display: flex;
   justify-content: space-around;
   position: fixed;
-  width: 100vw;
+  width: 80vw;
   height: 85px;
   border-radius: 2px;
   align-items: center;
@@ -109,18 +113,18 @@ html, body {
   display: flex;
   align-content: flex-start;
   align-items: flex-start;
-
   background-size: cover;
 }
 
 .img-example {
   cursor: pointer;
-  width: auto;
+  width: 200px;
   box-shadow: 0px 0px 5px black;
 }
 
 .data-par {
   display: flex;
+  width: auto;
   align-content: space-between;
   justify-content: center;
   padding: 5%;
