--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   width: 80vw;
-  height: 100%;
+  height: 100vh;
   text-align: center;
   background-color: rgb(219, 219, 219);
   background-position: center;
