--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -19,7 +19,7 @@ body {
   width: 80vw;
   height: 100vh;
   text-align: center;
-  background-color: rgb(219, 219, 219);
+  background-color: rgb(124, 124, 124);
   background-position: center;
   background-size: auto;
 }
@@ -111,6 +111,7 @@ body {
 
 .data-div {
   display: flex;
+  flex-direction: column;
   align-content: flex-start;
   align-items: flex-start;
   background-size: cover;
@@ -129,18 +130,25 @@ body {
   justify-content: center;
   padding: 5%;
   font-size: 1em;
-  background-color: rgba(216, 216, 216, 0.821);
+  background-color: rgba(179, 179, 179, 0.821);
   text-shadow: 0px 0px .03px rgb(60, 255, 0);
   box-shadow: 0px 0px .1px rgb(0, 0, 0);
   border-radius: 4px;
 }
 
 .article-wrap {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   width: auto;
-  height: 100vh;
   margin-top: 8em;
+}
 
+.image-form {
+  background-color: rgba(155, 155, 155)
+}
+
+#pic-input {
+  background-color: rgba(166, 166, 166);
 }
 
 /* FOOTER */
@@ -153,8 +161,8 @@ body {
   justify-content: space-evenly;
   display: flex;
   margin: auto;
-  width: 100%;
-  background-color: rgba(216, 216, 216, 0.821);
+  width: 80vw;
+  background-color: rgba(190, 190, 190, 0.821);
 }
 
 .footer-par {
