--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -150,14 +150,21 @@ body {
   text-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
 
+.data-wrap {
+  display: grid;
+  top: 50px;
+  position: relative;
+  width: 80vw;
+  height: 205px;
+}
+
 .data-div {
-  display: flex;
-  align-content: flex-start;
-  align-items: flex-start;
-  background-size: cover;
+  width: 80vw;
+  height: 205px;
 }
 
 .img-example {
+  grid-area: img;
   cursor: pointer;
   width: 200px;
   box-shadow: 0px 0px 5px black;
@@ -174,13 +181,6 @@ body {
   text-shadow: 0px 0px .03px rgb(60, 255, 0);
   box-shadow: 0px 0px .1px rgb(0, 0, 0);
   border-radius: 4px;
-}
-
-.article-wrap {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  margin-top: 8em;
 }
 
 .image-form {
