--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   justify-content: center;
   width: 100vw;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(82, 82, 82);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
 }
@@ -51,7 +51,7 @@ body {
   justify-content: space-around;
   float: left;
   position: fixed;
-  width: 80vw;
+  width: 79.9vw;
   height: 50px;
   border-radius: 2px;
   align-items: center;
@@ -154,14 +154,15 @@ body {
 
 /* Article Image Upload */
 .data-wrap {
+  margin-top: 245px;
   display: flex;
   position: relative;
   width: 80vw;
 }
 
 .data-div {
-  width: 80vw;
-  height: 205px;
+  display: flex;
+  flex-direction: column;
 }
 
 .img-example {
@@ -184,6 +185,10 @@ body {
   border-radius: 2px;
 }
 
+.input-class {
+  width: 162px;
+}
+
 .data-name {
   
 }
@@ -195,6 +200,11 @@ body {
 #pic-input {
   background-color: rgba(166, 166, 166);
 }
+
+/* .title-class {
+  color: black;
+  font-weight: bold;
+} */
 
 /* FOOTER */
 
