--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -14,7 +14,7 @@ body {
 }
 
 .app-wrap {
-  width: 80vw;
+  width: 500px;
   height: 100vh;
   background-color: rgb(165, 165, 165);
 }
@@ -22,7 +22,7 @@ body {
 .site-wrap {
   display: flex;
   justify-content: center;
-  width: 80vw;
+  width: 500px;
   text-align: center;
   background: url("https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-position-x: 83%;
@@ -51,7 +51,7 @@ body {
   justify-content: space-around;
   float: left;
   position: fixed;
-  width: 79.9vw;
+  width: 500px;
   height: 50px;
   border-radius: 2px;
   align-items: center;
@@ -60,17 +60,17 @@ body {
 
 .nav-buttons {
   position: relative;
-  margin-left: 45px;
-  margin-right: 45px;
+  margin-left: 15px;
+  margin-right: 15px;
   padding: 0;
   width: auto;
-  font-size: 1.6em;
+  font-size: 1.2em;
   color: rgb(170, 170, 170);
+  -webkit-text-decoration-line: none;
   text-decoration-line: none;
   text-shadow: 0px 0px 1px rgb(0, 0, 0);
   transition: color .25s ease-in-out, text-shadow .25s ease-in-out;
   border-radius: 2px;
-
 }
 
 .nav-buttons:hover {
@@ -86,13 +86,11 @@ body {
 }
 
 .search-bar {
-  font-size: 22px;
-  width: auto;
-  left: 58px;
-  border: none;
+  font-size: 16px;
+  width: 80px;
   position: relative;
-  margin-left: 45px;
-  margin-right: 45px;
+  margin-left: 15px;
+  margin-right: 15px;
   padding: 0;
   color: rgb(5, 5, 5);
   background-color: rgb(182, 182, 182);
@@ -110,7 +108,7 @@ body {
 /* Header */
 .header-wrap {
   width: 80vw;
-  height: 290px;
+  height: 265px;
   background: url("https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-position: center;
   background-size: cover;
