--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -25,8 +25,6 @@ body {
   width: 500px;
   text-align: center;
   background: url("https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-  background-position-x: 83%;
-  background-position-y: 32%;
   background-size: cover;
 }
 
@@ -107,7 +105,7 @@ body {
 
 /* Header */
 .header-wrap {
-  width: 80vw;
+  width: 500px;
   height: 265px;
   background: url("https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-position: center;
@@ -115,7 +113,7 @@ body {
 }
 
 .header-class {
-  margin-top: 30px;
+  margin-top: 50px;
   display: flex;
   width: auto;
   flex-direction: column;
