--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -153,7 +153,7 @@ body {
   margin-top: 245px;
   display: flex;
   position: relative;
-  width: 80vw;
+  width: 500px;
 }
 
 .data-div {
@@ -185,10 +185,6 @@ body {
   width: 162px;
 }
 
-.data-name {
-  
-}
-
 .image-form {
   background-color: rgba(155, 155, 155)
 }
@@ -212,7 +208,7 @@ body {
   justify-content: space-evenly;
   display: flex;
   margin: auto;
-  width: 80vw;
+  width: 500px;
   background-color: rgba(190, 190, 190, 0.821);
 }
 
@@ -226,10 +222,10 @@ body {
 
 .quality-div {
   display: flex;
-  margin-top: 120px;
-  width: 99vw;
-  flex-direction: column;
-  background-color: rgba(216, 216, 216, 0.821);
+  margin-top: 80px;
+  width: 500px;
+  color: rgb(189, 189, 189);
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
+  flex-direction: column;;
   border-radius: 2px;
-  box-shadow: 0px 0px .1px rgb(0, 0, 0);
 }
