--- a/text-detect/client/src/index.css
+++ b/text-detect/client/src/index.css
@@ -185,7 +185,8 @@ body {
 }
 
 .input-class {
-  width: 162px;
+  font-size: larger;
+  width: auto;
 }
 
 .input-class::-webkit-file-upload-button {
@@ -194,7 +195,7 @@ body {
 }
 
 .image-form {
-  background-color: rgba(155, 155, 155, 0.342)
+  background-color: rgba(115, 78, 108, 0.8);
 }
 
 #pic-input {
