--- a/12-26-2019/styles.css
+++ b/12-26-2019/styles.css
@@ -4,8 +4,39 @@
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #canvas {
-    width: auto;
-    height: 100vh; 
+
+
+    width: 500px;
+    /* height: 100vh;  */
     background-color: black;
+}
+
+.animate-container {
+    width: 500px;
+    height: 200px;
+    background-color: black;
+}
+
+.animate {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    /* background-color: black; */
+    animation-name: test;
+    animation-duration: 10s;
+}
+
+@keyframes test {
+    0% {background-color: red; left: 0px; top: 0px;}
+    20% {background-color: orange; left: 250px; top: 90px;}
+    40% {background-color: yellow; left: 90px; top: 200px;}
+    60% {background-color: green; left: 100px; top: 30px;}
+    80% {background-color: blue; left: 400px; top: 200px;}
+    100% {background-color: purple; left: 250px; top: 100px;}  
 }
